Crash when linking/appending a scene to a blend when another linked scene in this blend is currently open/active #53250

Closed
opened 2017-11-04 17:20:10 +01:00 by MoritzBrueckner · 4 comments

System Information
Windows 8.1 64 bit
nvidia Geforce GTX 750Ti

Blender Version
Broken: since release 2.77 22a2853 | also in latest build 6ec599c
Worked: release 2.76b f337fea

Short description of error
If you link or append a scene into a main file and there is another linked scene active, blender will crash. If you make a non-linked scene active in the file before linking/appending it works.

Exact steps for others to reproduce the error
Example Files
Open main.blend and try to link scene link_b from link_b.blend when scene is active and then when link_a is active.

**System Information** Windows 8.1 64 bit nvidia Geforce GTX 750Ti **Blender Version** Broken: since release 2.77 22a2853 | also in latest build 6ec599c Worked: release 2.76b f337fea **Short description of error** If you link or append a scene into a main file and there is another linked scene active, blender will crash. If you make a non-linked scene active in the file before linking/appending it works. **Exact steps for others to reproduce the error** [Example Files ](https://www.dropbox.com/s/lzol07ds02sf70q/linking_scenes_bug.zip?dl=1) Open main.blend and try to link scene *link_b* from link_b.blend when *scene* is active and then when *link_a* is active.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MoritzBrueckner

Added subscriber: @MoritzBrueckner
Bastien Montagne self-assigned this 2017-11-05 09:44:10 +01:00

This issue was referenced by b28da9dbf8

This issue was referenced by b28da9dbf81581454ecda8197f4b23574e495729

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53250
No description provided.